--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4.5.0
+        with:
+          python-version: 3.9
+      - name: Generate html
+          run: pip install airium          
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
