--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,8 +35,7 @@ jobs:
         with:
           python-version: 3.9
       - name: Generate html
-        run: pip install airium
-        run: python main.py
+        run: pip install airium && python main.py
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
