--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,7 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        ref: 'dev'
+        with:
+          ref: 'dev'
       - name: Setup Python
         uses: actions/setup-python@v4.5.0
         with:
